--- a/src/css/App.css
+++ b/src/css/App.css
@@ -25,7 +25,7 @@
 /* globals */
 body {
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 h1,
@@ -156,6 +156,12 @@ h6 {
   justify-content: space-between;
   align-items: center;
   height: 40px;
+}
+
+@media only screen and (max-width: 768px) {
+  .top-nav h6 {
+    font-size: 0.7rem;
+  }
 }
 
 .top-nav h6 {
